Fix alignment of navigation

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -137,3 +137,7 @@
     color: #fff;
 
 }
+
+.dropdown-toggle::after {
+    display: none;
+}
